# django-stomp

./: .coveragerc  .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.tox-tests  LICENSE  Makefile  Pipfile  README.md  azure-pipelines.yml  docker-compose.yml  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: pull_request_template.md
django_stomp/: apps.py  builder.py  callbacks.py  exceptions.py  execution.py  helpers.py  publisher.py  settings.py  start.py  subscriptions.py
django_stomp/api/conf_reader/: __init__.py  django.py
django_stomp/api/stomp11/: publish.py  subscribe.py
django_stomp/api/subscribe/stomp11/: __init__.py
django_stomp/customizations/: __init__.py
django_stomp/debug_callback_view/: README.md  apps.py  urls.py  views.py
django_stomp/infra/: base_listener.py  env.py
django_stomp/management/commands/: ack_all_messages.py  clean_queue.py  move_messages.py  pubsub.py  subscribe.py
django_stomp/old/: builder.py  consumer.py  execution.py  start.py
django_stomp/services/: builder.py  consumer.py  execution.py  listener.py  producer.py  settings_scanner.py
django_stomp/services/stomp11/: adapter.py  builder.py  listener.py  subscription.py
django_stomp/services/subscribe/stomp11/: builder.py  callback.py  context.py  listener.py
django_stomp/settings/: conf_reader.py  default_values.py  defaults.py  django_project.py  django_stomp.py  support.py  types.py
django_stomp/settings/parsers/: __init__.py  django.py  support.py
scripts/: start-formatter-lint.sh  start-tests.sh  start-tox-tests.sh
tests/: conftest.py
tests/integration/: test_execution.py
tests/integration/debug_callback_view/: test_views.py
tests/integration/management/commands/: test_move_messages.py
tests/integration/services/: test_producer.py
tests/integration/test_execution/: test_execution.py  test_graceful_shutdown.py
tests/resources/custom-activemq-conf/: activemq.xml
tests/resources/custom-rabbitmq-conf/: rabbitmq.conf
tests/support/: callbacks_for_tests.py  connections_details.py  dtos.py  helpers.py  message_details.py  models.py  queue_details.py  topic_details.py
tests/support/activemq/: connections_details.py  message_details.py  queue_details.py  subscribers_details.py  topic_details.py
tests/support/rabbitmq/: __init__.py
tests/unit/: test_helpers.py  test_settings.py
tests/unit/debug_callback_view/: test_views.py
tests/unit/management/commands/: test_move_messages.py  test_pubsub.py
tests/unit/services/: test_consumer.py  test_producer.py
