[tool.poetry]
name="django-stomp"
version="6.1.0"
description="A simple implementation of STOMP with Django"
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>", "Ricardo Baltazar Chaves <ricardobchaves6@gmail.com>", "Willian Antunes <willian.lima.antunes@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juntossomosmais/django-stomp"
repository = "https://github.com/juntossomosmais/django-stomp"
documentation = "https://github.com/juntossomosmais/django-stomp"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django :: 5.1",
    "Environment :: Web Environment",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "django_stomp"}]

[tool.poetry.dependencies]
python = "^3.9"
request-id-django-log = "*"
"stomp.py" = "^8"
tenacity = "^8"

[tool.poetry.group.dev.dependencies]
django = "^4"
tox = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-django = "*"
parsel = "*"
requests = "*"
trio = "*"
pytest-trio = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''


[tool.isort]
force_single_line = true
line_length = 120
py_version = 312
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.12"

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true
show_error_context = false

# do not follow imports (except for ones found in typeshed)
follow_imports = "skip"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# allow untyped calls as a consequence of the options above
disallow_untyped_calls = false

# allow returning Any as a consequence of the options above
warn_return_any = false

# treat Optional per PEP 484
strict_optional = true

# ensure all execution paths are returning
warn_no_return = true

# lint-style cleanliness for typing needs to be disabled; returns more errors
# than the full run.
warn_redundant_casts = false
warn_unused_ignores = false

# The following are off by default since they're too noisy.
# Flip them on if you feel adventurous.
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true